<resources>
    <string name="app_name">Parcel</string>
    <string name="app_name_new">Parcel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="breakfast_lunch"><![CDATA[Breakfast & Lunch :]]></string>
    <string name="menu">Menu  Loading Please Wait...</string>
    <string name="login">Login</string>
    <string name="price_string">OMR</string>
    <string name="google_map_key">AIzaSyDLOQsczTjNrp0wrCd0nrm8nhaP78PHly8</string>
    <string name="weekly">Weekly</string>
    <string name="breakfast">Breakfast </string>
    <string name="breakfast_new">Breakfast </string>
    <string name="lunch">Lunch </string>
    <string name="lunch_new">Lunch </string>
    <string name="both">Both </string>
    <string name="both_new">Both </string>
    <string name="both_ar"> على حد سواء</string>
    <string name="breakfast_ar">وجبة افطار</string>
    <string name="lunch_ar">غداء</string>
    <string name="lunch_ar_new">وجبة الغداء </string>
    <string name="both_ar_new"> الإفطار و الغداء</string>
    <string name="breakfast_ar_new">وجبة الإفطار  </string>
    <string name="view_menu">View Menu</string>
    <string name="choose_package">Choose Package</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="packages">Packages</string>
    <string name="main_menu">Subscription Menu</string>
    <string name="parcel_oman">Parcel</string>
    <string name="party_box">Party Box</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="subscription_type">Subscription Type</string>
    <string name="cancel">Cancel</string>
    <string name="subscribe_string">Subscribe</string>
    <string name="send">send</string>
    <string name="tap_on_day_to_see_its_detail">Tap on day to see its detail</string>
    <string name="next">Next</string>
    <string name="price_arabic">﷼</string>
    <string name="check_out">Check Out</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email_address">Email Address*</string>
    <string name="phone">Phone*</string>
    <string name="company">Company*</string>
    <string name="office_no">Office/House No*</string>
    <string name="floor_no">Floor No</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="package_summary">Package Summary</string>
    <string name="package_summary_checkout">Package Summary</string>
    <string name="package_name">Package Name</string>
    <string name="package_type">Package Name</string>
    <string name="subtotal">SubTotal</string>
    <string name="bucket">Bucket</string>
    <string name="Login">Login</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="breakfastlunch"><![CDATA[Breakfast & Lunch]]></string>
    <string name="promo_code">Have a Promo code?</string>
    <string name="promo_code_checkout">Have a Promo code?</string>
    <string name="freeze">Freeze</string>
    <string name="i_agree_to_the_parcel_oman_terms_conditions"><![CDATA[I agree to the Parcel Oman Terms & Conditions]]></string>
    <string name="data_loading">Data loading Please Wait!</string>
    <string name="home_location">Home Location</string>
    <string name="save_address">Save Address</string>
    <string name="close_string">Close</string>
    <string name="password_string">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="account_no">Account No</string>
    <string name="select_string">Select</string>
    <string name="i_agree_to_the_parcel_oman_ter"><![CDATA[I agree to the Parcel Oman Terms & Conditions]]></string>
    <string name="send_gift_to_friend">Send Gift to Friend</string>
    <string name="company_name">Company Name</string>
    <string name="send_gift">Send Gift</string>
    <string name="parcel_gethering">Parcel Gathering Box</string>
    <string name="parcel_gathering_box">Parcel Gathering Box</string>
    <string name="choose_upto_4_options_a_total_of_24_pcs_in_a_platter">Choose Upto 4 Options. A Total Of 24 Pcs In A Platter@ OMR %1$s</string>
    <string name="choose_upto_6_options_a_total_of_36_pcs_in_a_platter">Choose Upto 6 Options. A Total Of 36 Pcs In A Platter@ OMR %1$s</string>
    <string name="cart_string">Cart</string>
    <string name="want_to_exit">Do you really want to exit?</string>
    <string name="food_of_the_day">Food Of The Day !!!</string>
    <string name="subscribe">Subscribers</string>
    <string name="subscribe_new">مشتركين</string>
    <string name="both_string">Both</string>
    <string name="from_string">From : </string>
    <string name="order_start_string">Order  : </string>
    <string name="to_string">To : </string>
    <string name="exciting_meal">Exciting Meal on </string>
    <string name="exciting_meal_string">Exciting Meal on  </string>
    <string name="exciting_meal_string_ar">وجبة مثيرة على</string>
    <string name="active_package_string">Active Package</string>
    <string name="active_package_string_ar">حزمة نشطة</string>
    <string name="sorry_donot_serve">Sorry! We don\'t serve on Fridays</string>
    <string name="sorry_donot_sat">Sorry! We don\'t serve on Saturdays</string>
    <string name="parcel_added_success">Parcel added successfully</string>
    <string name="quantity_double_success">Quantity Double Successfully!</string>
    <string name="home_string">Home</string>
    <string name="menu_string">Menu</string>
    <string name="add_cart_string">Add Cart</string>
    <string name="upgrade_package_string">Upgrade Package</string>
    <string name="freeze_package_string">Freeze Package</string>
    <string name="enter_data_field">Please Enter data in all fields</string>
    <string name="enter_promo">Enter Promo Code</string>
    <string name="code_not_valid">Code is not Valid</string>
    <string name="please_enter_valid_email">Your Provided E-mail Is Already Associated With Another Account.</string>
    <string name="privacy_policy_string">Privacy Policy</string>
    <string name="logout_string">Logout</string>
    <string name="my_profile_string">My Profile</string>
    <string name="my_subscriptions_string">My Subscriptions</string>
    <string name="subscription_history_string">Subscription History</string>
    <string name="change_password_string">Change Password</string>
    <string name="save_string">Save</string>
    <string name="enter_your_old_password">Enter Your Old Password*</string>
    <string name="enter_your_new_password">Enter Your New Password*</string>
    <string name="update_password">Update Password</string>
    <string name="my_history">My History</string>
    <string name="group_string">Group</string>
    <string name="group_string_ar">مجموعة</string>
    <string name="order_id_ar">: رقم التعريف الخاص بالطلب</string>
    <string name="from_string_ar">  من عند : </string>
    <string name="_2_subscribers">2 Subscribers</string>
    <string name="to_string_ar">إلى : </string>
    <string name="order_start_string_ar">ترتيب البدء</string>
    <string name="order_id">Order ID :</string>
    <string name="parcel_gathering_box_history">Parcel Gathering Box History</string>
    <string name="order_id_parcel">Order ID</string>
    <string name="order_date_parcel">Order Date</string>
    <string name="comapany_name_parcel">Comapany Name</string>
    <string name="floor_no_string">Floor No</string>
    <string name="amount_parcel">Amount</string>
    <string name="status_parcel">Status</string>
    <string name="action_parcel">Action</string>
    <string name="subject_string">Subject</string>
    <string name="send_message_string">Send Message</string>
    <string name="message_string">Message</string>
    <string name="main_menu_string">Subscription Menu</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="parcel_cafe_string">Parcel Cafe</string>
    <string name="parcel_cafe_string_ar">بارسيل كافيه</string>
    <string name="weekly_string">Weekly</string>
    <string name="_2_weeks">2 Weeks</string>
    <string name="lunch_string">Lunch :</string>
    <string name="start_date">Start Date</string>
    <string name="individual_string">Individual</string>
    <string name="_2_person">2 Person</string>
    <string name="_4_person">4 Person</string>
    <string name="_6_person">6 Person</string>
    <string name="_8_person">8 Person</string>
    <string name="no_of_subscribers">No of Subscribers</string>
    <string name="choose_type">Choose Type</string>
    <string name="package_menu">Package Menu</string>
    <string name="comments_string">Comments</string>
    <string name="breakfast_string">Breakfast</string>
    <string name="add_to_cart_string">Add to Cart</string>
    <string name="no_of_items">No. of Items :</string>
    <string name="total_price">Total Price :</string>
    <string name="add_to_bucket">Add to Bucket</string>
    <string name="seleted_string">Selected</string>
    <string name="party_box_summary">Party Box Summary</string>
    <string name="login_string">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="in_progress_string">In Progress()</string>
    <string name="ready_to_dispatch_string">Ready to Dispatch()</string>
    <string name="picked_up_string">Picked Up()</string>
    <string name="delivered_not_delivered">Delivered/ Not Delivered()</string>
    <string name="qty_string">QTY</string>
    <string name="total">Total</string>
    <string name="my_account">My Account</string>
    <string name="food_string">Food</string>
    <string name="this_food_has_been_gifted">This Food Has Been Gifted..</string>
    <string name="gift_to_friend">Gift to Friend</string>
    <string name="food_of_string">Food of</string>
    <string name="replace_string">Replace</string>
    <string name="double_string">Double</string>
    <string name="double_meal_string">Double Your Meal</string>
    <string name="parcel_cafe">Parcel Cafe</string>
    <string name="forgot_password_string">Forget Password</string>
    <string name="email_address_string">Email Address*</string>
    <string name="enter_quantity_string">Enter Quantity</string>
    <string name="enter_quantity_extra_string">Enter Extra Quantity</string>
    <string name="omr_0_string">OMR 0</string>
    <string name="card_no">Card No</string>
    <string name="card_no_string">Card No*</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="expiry_month">Expiry month</string>
    <string name="cvv_string">CVV</string>
    <string name="make_this_default_card">Make This Default Card?</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="your_parcel_gathering_box_es_will_be_delivered_after_24_hours_from_now">Your Parcel Gathering Box(es) Will Be Delivered After Mentioned Time(s) From Now.</string>
    <string name="yes_checkout_now">Yes, Checkout Now!</string>
    <string name="no_cancel_please">No, Cancel Please!</string>
    <string name="ok_string">OK</string>
    <string name="congratulation_string_checkout">Congratulations! Your Order Was Completed Successfully.</string>
    <string name="thank_you">Thank You!</string>
    <string name="further_assistance">We Have Received Your Order. An Email Has Been Sent To Your Provided Email Address. Please Log In Your Account For Further Assistance.</string>
</resources>