<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialogTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:fontFamily="@font/ptsansregular"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12dp"
        android:textSize="18sp"
        android:text="@string/congratulation_string_checkout"
        android:fontFamily="@font/chauregular"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/termCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/ptsansregular"
        android:text="@string/further_assistance"
        android:textColor="@color/black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp">

        <TextView
            android:id="@+id/nextBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/buttonbackground_peach"
            android:fontFamily="@font/chauregular"
            android:paddingStart="20dp"
            android:paddingTop="@dimen/_8dp"
            android:visibility="gone"
            android:paddingEnd="20dp"
            android:paddingBottom="@dimen/_8dp"
            android:text="Next"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/closeBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_12dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/buttonbackground_gray"
            android:fontFamily="@font/chauregular"
            android:paddingStart="20dp"
            android:paddingTop="@dimen/_8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="@dimen/_8dp"
            android:text="@string/ok_string"
            android:textColor="@color/black" />
    </RelativeLayout>
</LinearLayout>
