<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10dp">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:fontFamily="@font/ptsansregular"
        android:hint="@string/email_address_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/closeBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/chauregular"
        android:layout_marginEnd="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="@dimen/_8dp"
        android:paddingTop="4dp"
        android:paddingEnd="@dimen/_8dp"
        android:textAllCaps="false"
        android:background="@drawable/buttonbackground_gray"
        android:paddingBottom="@dimen/_4dp"
        android:text="@string/close_string"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/forgotBT"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <Button
        android:id="@+id/forgotBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        app:layout_constraintStart_toEndOf="@+id/closeBT"
        android:background="@drawable/backgroundbutton"
        android:paddingStart="@dimen/_12dp"
        android:fontFamily="@font/chauregular"
        android:paddingTop="4dp"
        android:paddingEnd="@dimen/_12dp"
        android:textAllCaps="false"
        android:paddingBottom="@dimen/_4dp"
        android:text="@string/forgot_password_string"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />
</android.support.constraint.ConstraintLayout>